--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-data/*.csv.zip filter=lfs diff=lfs merge=lfs -text
 data/creditcard_2023.csv.zip filter=lfs diff=lfs merge=lfs -text
+data/ieee-fraud-detection/*.csv filter=lfs diff=lfs merge=lfs -text
